--- a/src/main/resources/templates/pagina_categoria.html
+++ b/src/main/resources/templates/pagina_categoria.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title th:text="'MugCraft - ' + ${categoria.nomePlural}">
+        <title th:text="'Tatiart - ' + ${categoria.nomePlural}">
             MugCraft - Título Provisório
         </title>
 
@@ -19,44 +19,7 @@
             />
         <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
-        <script>
-            tailwind.config = {
-                theme: {
-                    extend: {
-                        colors: {
-                            burgundy: {
-                                50: "#FCF4F4",
-                                100: "#F9E9E9",
-                                200: "#F3D3D3",
-                                300: "#EDBDBD",
-                                400: "#E7A7A7",
-                                500: "#E19191",
-                                600: "#DB7B7B",
-                                700: "#D56565",
-                                800: "#601735",
-                                900: "#6C1919",
-                            },
-                            beige: {
-                                50: "#FFFCF5",
-                                100: "#FFF9EB",
-                                200: "#FFF3D6",
-                                300: "#FFEEC2",
-                                400: "#FFE8AD",
-                                500: "#FFE399",
-                                600: "#FFDD84",
-                                700: "#FFD870",
-                                800: "#EBD8D4",
-                                900: "#DCC9A6",
-                            },
-                        },
-                        fontFamily: {
-                            playfair: ['"Playfair Display"', "serif"],
-                            sans: ["Inter", "sans-serif"],
-                        },
-                    },
-                },
-            };
-        </script>
+        <script src="/js/tailwind.config.js"></script>
         <style>
             .shadow-custom {
                 box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
