fix(footer): Corrige exibição de dados e aplica tema na pág. de categoria

--- a/src/main/resources/templates/pagina_categoria.html
+++ b/src/main/resources/templates/pagina_categoria.html
@@ -699,7 +699,7 @@
             </section>
         </main>
         <footer id="contato" class="w-full py-6 bg-burgundy-900">
-        <div th:replace="~{fragments/footer :: footer}"></div>
+        <div th:replace="~{fragments/footer :: footer(theme='dark')}"></div>
         <script src="script.js"></script>
         <script>
             lucide.createIcons();
